Bug 32932 - tda8261: Debug output spams kernel log
Summary: tda8261: Debug output spams kernel log
Status: RESOLVED CODE_FIX
Alias: None
Product: v4l-dvb
Classification: Unclassified
Component: dvb-frontend (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Alan
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-04-09 11:07 UTC by nona00
Modified: 2012-10-23 18:31 UTC (History)
2 users (show)

See Also:
Kernel Version: 2.6.32-31, 2.6.38.2
Subsystem:
Regression: No
Bisected commit-id:


Attachments
Patch for kernel 2.6.38.2. to disable debug output of tda8261 (2.47 KB, patch)
2011-04-09 11:08 UTC, nona00
Details | Diff

Description nona00 2011-04-09 11:07:47 UTC
The driver of tda8261 produces a large amount of debug output after every channel switch:

[  261.420519] tda8261_get_bandwidth: Bandwidth=40000000
[  261.424027] tda8261_get_bandwidth: Bandwidth=40000000
[  261.425662] tda8261_set_state: Step size=1, Divider=1000, PG=0x3c4 (964)
[  261.425874] tda8261_set_state: Waiting to Phase LOCK
[  261.448171] tda8261_get_status: Tuner Phase Locked
[  261.448177] tda8261_set_state: Tuner Phase locked: status=1
[  261.448182] tda8261_set_frequency: Frequency=964000
[  261.448186] tda8261_get_frequency: Frequency=964000

If you run a channel search the output will spam the kernel.

Attached is a patch which disables the debug output.
Comment 1 nona00 2011-04-09 11:08:51 UTC
Created attachment 53902 [details]
Patch for kernel 2.6.38.2. to disable debug output of tda8261
Comment 2 Florian Mickler 2012-10-15 21:23:34 UTC
A patch referencing this bug report has been merged in Linux v3.7-rc1:

commit eb2e2652457e407ff617a4412120e924398e7545
Author: Alan Cox <alan@linux.intel.com>
Date:   Sun Sep 2 03:30:15 2012 -0300

    [media] tda8261: add printk levels

Note You need to log in before you can comment on or make changes to this bug.